removed Jabel, Java 8 will not be supported anymore, minimal Java version will be Java 11 starting with the next release template engine use is replaced with Jamal code gen, it is deprecated